# 2024-2025-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: .$CarWiring.drawio.bkp  .$General Block Diagram.drawio.bkp  Car.drawio  CarWiring.drawio  MountingRequirements.txt  readme.md
doc/KICAD Symbol Libraries/ARDUINO_NANO/: SHIELD_ARDUINO_NANO.kicad_mod
doc/Power Regulator PCB/: Power Regulator PCB.kicad_pcb  Power Regulator PCB.kicad_prl  Power Regulator PCB.kicad_pro  _autosave-Power Regulator PCB.kicad_pcb  ~Power Regulator PCB.kicad_sch.lck
doc/Power Regulator PCB (LT8608)/: #auto_saved_files#  Power Regulator PCB (LT8608).kicad_pcb  Power Regulator PCB (LT8608).kicad_prl  Power Regulator PCB (LT8608).kicad_sch  ~Power Regulator PCB (LT8608).kicad_sch.lck
doc/Schematics and PCBs/ESP32 IMU/: ESP32 IMU.kicad_pcb  ESP32 IMU.kicad_prl  ESP32 IMU.kicad_pro  ESP32 IMU.kicad_sch  fp-info-cache  ~ESP32 IMU.kicad_pcb.lck
doc/Schematics and PCBs/Generic NANO CAN/: Generic NANO CAN.kicad_prl  Generic NANO CAN.kicad_sch
doc/Schematics and PCBs/Main Computer POC/: Main Computer POC.kicad_prl  Main Computer POC.kicad_pro  Main Computer POC.kicad_sch
doc/Schematics and PCBs/Power Regulator PCB/: Power Regulator PCB.kicad_sch
doc/Schematics and PCBs/Power Regulator PCB (AZ1084C)/: Power Regulator PCB (AZ1084C).kicad_pro  fp-info-cache
doc/Schematics and PCBs/Power Regulator PCB (LT8608)/: Power Regulator PCB (LT8608).kicad_pcb  Power Regulator PCB (LT8608).kicad_prl  Power Regulator PCB (LT8608).kicad_pro  Power Regulator PCB (LT8608).kicad_sch
doc/Schematics and PCBs/Training PCB(HTM Workshop)/: Training PCB.kicad_prl  Training PCB.kicad_pro  Training PCB.kicad_sch
doc/Schematics and PCBs/Untitled/: Untitled.kicad_prl  Untitled.kicad_pro
doc/Schematics and PCBs/test/: test.kicad_prl  test.kicad_pro  test.kicad_sch
doc/Symbology/2472/: 2472.kicad_sym  2472.step
doc/Wiring Diagrams/: CarWiring.drawio
doc/templates/: class.txt  internal.txt
hardware/KICAD Symbol Libraries/2472/: MODULE_2472.kicad_mod
hardware/KICAD Symbol Libraries/ARDUINO_NANO/: ARDUINO_NANO.kicad_sym
hardware/KICAD Symbol Libraries/ESP32-DEVKITC-32D/: ESP32-DEVKITC-32D.kicad_sym  MODULE_ESP32-DEVKITC-32D.kicad_mod
hardware/Wiring Diagrams/: General Block Diagram copy.drawio
hardware/kiCAD footprints and symbols/DT13-6P/: DT13-6P.kicad_sym
include/: Commands.h  DataTypes.h  Devices.h
src/BajaGUI2025/Assets/: Commands.cs  DataTypes.cs  Test.cs  TestRenderTex.renderTexture
src/BajaGUI2025/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
src/BajaGUITerminal/: DataManager.cs  DataPacket.cs  DataStream.cs  DataType.cs  Program.cs  SerialInterface.cs
src/CarComputer/: readme.md
src/CarComputer/include/: CANDevice.h  CANDispatcher.h  Car.h  CarContainer.h  CarLogger.h  CarTime.h  Coms.h  Constants.h  DashSubsystem.h  DataStorage.h  DrivetrainSubsystem.h  IMUSubsystem.h  LiveDataStream.h  Procedure.h  ProcedureScheduler.h  Subsystem.h  TemperatureSubsystem.h
src/CarComputer/src/: .CarContainer.cpp.swo  .CarContainer.cpp.swp  CANDevice.cpp  CANDispatcher.cpp  CANDispatcher.h  Car.cpp  Car.h  CarContainer.cpp  CarContainer.h  CarLogger.cpp  CarTime.cpp  Coms.cpp  Coms.h  DataStorage.cpp  ProcedureScheduler.cpp  ProcedureScheduler.h  a.out  car.cpp  car.h  main.cpp
src/templates/: method.txt  readme.md
tests/: readme.md
tests/BajaGUI2025/Assets/: Test.cs
tests/BajaGUI2025/ProjectSettings/: ProjectSettings.asset  TagManager.asset
tests/C#Test/: CommandEnumGenerator.cs  Program.cs
tests/CANSocketTest/: main  main.cpp
tests/DatabaseParsing/: DatabaseToCSV.py
tests/GraphRendering/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  TagManager.asset
tests/New Stuff Test/: platformio.ini
tests/NewProcedureSchedulerTest/: main  main.cpp
tests/RadioPITest/: test  test.cpp
tests/SQLiteTest/: idk.db  main  main.cpp
tests/ServoTest/: platformio.ini
tests/SmartPointersTest/: main  main.cpp
(+468 files in other folders)
